11.apr (la)
      - fix #10158: no icons for MySoundFonts/MyImagesDirectory
      - fix #10175: patch from Miwarre
      - another fix for #7740
      - fix #7944: Instrument limit (again)
8.apr (ws)
      - fix #10105: Apple+Shift+Click on note causes crash
      - allow quit in foto-mode (#10028)
      - fix #7740: drag and delete + undo causes crash
      - fix #10110: invisible text is not 'grayed'
      - fix #10117: rehearsal mark text missing
      - autoconnect feature for JACK midi input
7.apr (ws)
      - implemented JACK midi input
05.apr (la)
      - update for Jack 1.9.7 on windows, lower jack version should be ok
        on linux and mac
31.mar (ws)
      - applied patches from miwarre to enhance backward compatibility (#8403/#8405)
30.mar (ws)
      - fix: dont jump cursor back during playback
      - first code for chord articulation editor
28.mar (ws)
      - #8993: regression fix for beam layout
25.mar (ws)
      - new tempo text palette entries
      - new tempo text property: "follow text", tempotext is parsed to determine
        actual tempo.
      - better backward compatibility for copyright text (#9886)
      - fix #9901: changing sound in mixer doesn't update properly
      - fix #9916: ties don't copy
      - do not show nonexistant files in "open recent"
      - fix #9919: error on open/read musicxml was not handled
24.mar (ws)
      - add previous/next button to measure properties dialog
      - draw grips in edit mode always on top of all other elements
      - fix initialization of split-window action
23.mar (ws)
      - new commands: "split measure" and "join measure"
22.mar (ws)
      - new display option: "show unprintable" allows to hide spacer and layout-breaks
      - avoid recursive call of instrument dialog when pressing "i" again when
        dialog is active
      - instrument dialog: allow staff to move to previous or next part with up/down
       (la)
      - add export to MP3 option via lame_enc "a la Audacity"