@@ -1,4 +1,5 @@
 11.apr (la)
+      - fix #10157: MyImages Directory button inactive
       - fix #10158: no icons for MySoundFonts/MyImagesDirectory
       - fix #10175: patch from Miwarre
       - another fix for #7740
